[package]
name = "webapp-deployer"
version = "1.0.0"
authors = ["Akira Ueda <ue@gol.com>"]
edition = "2018"
publish = false

[dependencies]
walkdir = "2.2.9"
structopt = "0.3.5"
rusoto_core = "0.42.0"
rusoto_s3 = "0.42.0"
failure = "0.1.6"
regex = "1.3.1"
colored = "1.9.0"
toml = "0.5.5"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_regex = "0.4.0"
